--- a/Schnitzel.html
+++ b/Schnitzel.html
@@ -33,28 +33,28 @@
         </div>
     </nav>
 
-    <img src="img/schnitzel.jpg" alt="schnitzel Jerman" class="hero-image w-100">
+    <img src="img/schnitzel.jpg" alt="schnitzel Jerman" class="hero-image w-100 fade-in">
 
     <div class="content container">
-        <h1 class="section-title">Schnitzel Terkenal di Jerman</h1>
-        <p class="text-center mb-4">
+        <h1 class="section-title fade-in">Schnitzel Terkenal di Jerman</h1>
+        <p class="text-center mb-4 fade-in">
             Schnitzel adalah hidangan daging yang digoreng tepung hingga renyah, sangat populer di Jerman dan negara-negara Eropa lainnya. Disajikan dengan kentang, lemon, atau salad segar, schnitzel menawarkan rasa klasik yang memanjakan lidah. Berikut beberapa jenis schnitzel paling digemari:
         </p>
-        <ul class="schnitzel-list">
+        <ul class="schnitzel-list fade-in">
             <li><strong>Wiener Schnitzel</strong> - Asli Austria namun sangat populer di Jerman, terbuat dari daging sapi muda yang digoreng tepung dengan tekstur renyah dan rasa lembut.</li>
             <li><strong>Chicken Schnitzel</strong> - Versi ayam yang ringan dan juicy, cocok untuk semua usia.</li>
             <li><strong>Turkey Schnitzel</strong> - Alternatif rendah lemak, tetap gurih dan nikmat dengan rasa khas kalkun.</li>
             <li><strong>Beef Schnitzel</strong> - Lebih kaya rasa, cocok bagi pencinta daging merah dengan tekstur padat dan kenyal.</li>
         </ul>
 
-        <div class="fun-fact">
+        <div class="fun-fact fade-in">
             <b>Fun Fact:</b> Meskipun berasal dari Austria, Schnitzel telah menjadi makanan pokok di banyak rumah Jerman. Bahkan ada "Schnitzel Day" di beberapa restoran sebagai promosi mingguan!
         </div>
 
-        <img src="img/schnitzell.webp" alt="Currywurst" class="img-schnitzel">
+        <img src="img/schnitzell.webp" alt="Currywurst" class="img-schnitzel fade-in">
 
-        <h2 class="gallery-title">Galeri schnitzel Jerman</h2>
-        <div class="gallery">
+        <h2 class="gallery-title fade-in">Galeri schnitzel Jerman</h2>
+        <div class="gallery fade-in">
             <div class="gallery-item">
                 <img src="img/Wiener Schnitzel.jpg" alt="wienerschnitzel">
                 <a href="#" class="btn btn-outline-warning btn-below" data-target="menuschnitzel.html#wienerschnitzel">Explore</a>
@@ -73,11 +73,11 @@
             </div>
         </div>
 
-        <div class="tips-box">
+        <div class="tips-box fade-in">
             <b>Tips Penyajian:</b> Schnitzel paling lezat disajikan hangat dengan kentang goreng, kentang rebus, atau salad segar. Tambahkan irisan lemon untuk sentuhan rasa asam yang menyegarkan. Jangan lupa cocolan saus tartar atau mustard untuk pengalaman maksimal!
         </div>
 
-        <p class="text-center">
+        <p class="text-center fade-in">
             Schnitzel adalah simbol kelezatan kuliner Eropa yang sederhana namun menggoda. Saat berkunjung ke Jerman, jangan lewatkan kesempatan mencicipi berbagai variasi schnitzel yang menggugah selera—baik di restoran tradisional maupun di festival makanan lokal!
         </p>
     </div>
