--- a/Sosis.html
+++ b/Sosis.html
@@ -33,28 +33,28 @@
     </div>
   </nav>
 
-  <img src="img/BgSosis.jpg" alt="Sosis Jerman" class="hero-image w-100">
+  <img src="img/BgSosis.jpg" alt="Sosis Jerman" class="hero-image w-100 fade-in">
 
   <div class="content container">
-    <h1 class="section-title">Sosis Terkenal di Jerman</h1>
-    <p class="text-center mb-4">
+    <h1 class="section-title fade-in">Sosis Terkenal di Jerman</h1>
+    <p class="text-center mb-4 fade-in">
       Sosis adalah salah satu ikon kuliner Jerman yang mendunia. Negara ini memiliki lebih dari <b>1.500 jenis sosis</b> dengan rasa, bentuk, dan cara penyajian yang unik di setiap daerah.<br>Berikut beberapa sosis paling populer:
     </p>
-    <ul class="sosis-list">
+    <ul class="sosis-list fade-in">
       <li><strong>Bratwurst</strong> - Sosis panggang khas Nürnberg, gurih dan juicy.</li>
       <li><strong>Currywurst</strong> - Street food favorit, disajikan dengan saus kari tomat pedas.</li>
       <li><strong>Weisswurst</strong> - Sosis putih dari Bavaria, nikmat disantap hangat dengan pretzel dan mustard manis.</li>
       <li><strong>Bockwurst</strong> - Sosis rebus yang lembut, sering disantap bersama roti dan bir.</li>
     </ul>
     
-    <div class="fun-fact">
+    <div class="fun-fact fade-in">
       <b>Fun Fact:</b> Orang Jerman rata-rata mengonsumsi lebih dari <b>60 kg sosis per tahun</b>. Bahkan, di Berlin ada museum khusus Currywurst!
     </div>
 
-    <img src="img/BgSosis1.webp" alt="Currywurst" class="img-sosis">
+    <img src="img/BgSosis1.webp" alt="Currywurst" class="img-sosis fade-in">
 
-    <h2 class="gallery-title">Galeri Sosis Jerman</h2>
-    <div class="gallery">
+    <h2 class="gallery-title fade-in">Galeri Sosis Jerman</h2>
+    <div class="gallery fade-in">
       <div class="gallery-item">
         <img src="img/Bratwurst.jpg" alt="Bratwurst">
         <a href="#" class="btn btn-outline-warning btn-below" data-target="MenuSosis.html#bratwurst">Explore</a>
@@ -73,11 +73,11 @@
       </div>
     </div>
 
-    <div class="tips-box">
+    <div class="tips-box fade-in">
       <b>Tips Penyajian:</b> Sosis Jerman paling nikmat disantap dengan pretzel, sauerkraut (kubis asam), dan mustard. Untuk pengalaman otentik, coba padukan dengan bir Jerman favorit!
     </div>
 
-    <p class="text-center">
+    <p class="text-center fade-in">
       Banyak wisatawan mencicipi berbagai jenis sosis saat berkunjung ke Jerman, terutama saat festival makanan seperti <b>Oktoberfest</b>. Nikmati kelezatan sosis langsung dari negara asalnya!
     </p>
   </div>
