--- a/brot.html
+++ b/brot.html
@@ -33,28 +33,28 @@
         </div>
     </nav>
 
-    <img src="img/brot.jpg" alt="Brot Jerman" class="hero-image w-100">
+    <img src="img/brot.jpg" alt="Brot Jerman" class="hero-image w-100 fade-in">
 
     <div class="content container">
-        <h1 class="section-title">Roti Tradisional Jerman</h1>
-        <p class="text-center mb-4">
+        <h1 class="section-title fade-in">Roti Tradisional Jerman</h1>
+        <p class="text-center mb-4 fade-in">
             Jerman dikenal dengan beragam jenis roti (Brot) yang khas, kaya rasa, dan bernutrisi. Dari yang padat dan gelap hingga yang ringan dan putih, roti merupakan bagian penting dalam kehidupan sehari-hari masyarakat Jerman. Berikut ini beberapa jenis roti yang wajib kamu coba:
         </p>
-        <ul class="brot-list">
+        <ul class="brot-list fade-in">
             <li><strong>Pumpernickel</strong> - Roti hitam khas Westphalia dengan tekstur padat dan rasa sedikit manis, terbuat dari gandum hitam utuh dan dimasak dalam waktu lama.</li>
             <li><strong>Vollkornbrot</strong> - Roti gandum utuh yang sangat sehat, mengandung serat tinggi, cocok untuk gaya hidup sehat.</li>
             <li><strong>Roggenmischbrot</strong> - Campuran tepung gandum dan gandum hitam, teksturnya lembut dan sedikit asam, populer di banyak wilayah.</li>
             <li><strong>Weißbrot</strong> - Roti putih yang ringan dan empuk, lebih umum ditemukan di bagian selatan Jerman.</li>
         </ul>
     
-        <div class="fun-fact">
+        <div class="fun-fact fade-in">
             <b>Fun Fact:</b> Di Jerman, terdapat lebih dari 3.000 jenis roti yang diakui! Bahkan ada museum khusus roti di Ulm dan Ebergötzen.
         </div>
 
-        <img src="img/brott.jpg" alt="Aneka Brot Jerman" class="img-brot">
+        <img src="img/brott.jpg" alt="Aneka Brot Jerman" class="img-brot fade-in">
 
-        <h2 class="gallery-title">Galeri Roti Jerman</h2>
-        <div class="gallery">
+        <h2 class="gallery-title fade-in">Galeri Roti Jerman</h2>
+        <div class="gallery fade-in">
             <div class="gallery-item">
                 <img src="img/Pumpernickel.jpg" alt="Pumpernickel">
                 <a href="#" class="btn btn-outline-warning btn-below" data-target="menubrot.html#Pumpernickel">Explore</a>
@@ -73,11 +73,11 @@
             </div>
         </div>
 
-        <div class="tips-box">
+        <div class="tips-box fade-in">
             <b>Tips Penyajian:</b> Roti Jerman paling nikmat disantap dengan keju, selai buah, atau daging asap. Bisa juga dipadukan dengan sup atau salad untuk menu makan siang yang sehat dan mengenyangkan.
         </div>
 
-        <p class="text-center">
+        <p class="text-center fade-in">
             Brot adalah bagian penting dari budaya kuliner Jerman. Setiap daerah memiliki variasi khas yang mencerminkan sejarah dan bahan lokal. Jangan lewatkan pengalaman mencicipi berbagai jenis brot saat berkunjung ke Jerman!
         </p>
     </div>
