--- a/drink.html
+++ b/drink.html
@@ -33,28 +33,28 @@
     </div>
   </nav>
 
-  <img src="img/AsepBalap.jpg" alt="Sosis Jerman" class="hero-image w-100">
+  <img src="img/AsepBalap.jpg" alt="Sosis Jerman" class="hero-image w-100 fade-in">
 
   <div class="content container">
-    <h1 class="section-title">Minuman Terkenal di Jerman</h1>
-    <p class="text-center mb-4">
+    <h1 class="section-title fade-in">Minuman Terkenal di Jerman</h1>
+    <p class="text-center mb-4 fade-in">
       Jerman tidak hanya terkenal karena makanannya, tapi juga memiliki berbagai <b>minuman khas</b> yang unik dan beragam. Mulai dari bir klasik hingga minuman non-alkohol tradisional yang menyegarkan
     </p>
-    <ul class="sosis-list">
+    <ul class="sosis-list fade-in">
      <li><strong>Weißbier</strong> - Bir gandum khas Bavaria dengan rasa ringan dan sedikit manis.</li>
       <li><strong>Glühwein</strong> - Minuman anggur hangat yang dibumbui, populer saat musim dingin dan pasar Natal.</li>
       <li><strong>Apfelschorle</strong> - Campuran jus apel dan air soda, segar dan populer sebagai minuman sehari-hari.</li>
       <li><strong>Schorle anggur</strong> - Anggur putih dicampur dengan air soda, menjadi minuman ringan yang menyegarkan.</li>
     </ul>
     
-    <div class="fun-fact">
+    <div class="fun-fact fade-in">
        <b>Fun Fact:</b> Jerman memiliki lebih dari <b>1.300 pabrik bir</b> dan lebih dari 5.000 merek bir yang berbeda. Negara ini juga menjadi tuan rumah <b>Oktoberfest</b>, festival bir terbesar di dunia!
     </div>
 
-    <img src="img/BudiOliSamping.jpeg" alt="Currywurst" class="img-sosis">
+    <img src="img/bgdrink.jpg" alt="Currywurst" class="img-sosis fade-in">
 
-    <h2 class="gallery-title">Galeri Beer Jerman</h2>
-    <div class="gallery">
+    <h2 class="gallery-title fade-in">Galeri Beer Jerman</h2>
+    <div class="gallery fade-in">
       <div class="gallery-item">
         <img src="img/Apfelschorle.jpg" alt="Apfelschorle">
         <a href="#" class="btn btn-outline-warning btn-below" data-target="menudrink.html#Apfelschorle">Explore</a>
@@ -73,11 +73,11 @@
       </div>
     </div>
 
-    <div class="tips-box">
+    <div class="tips-box fade-in">
       <b>Tips Menikmati:</b> Bir Jerman paling nikmat disajikan dalam gelas dingin. Untuk non-alkohol, Apfelschorle cocok diminum saat cuaca panas. Minuman seperti Glühwein lebih pas dinikmati saat musim dingin.
     </div>
 
-    <p class="text-center">
+    <p class="text-center fade-in">
       Jika kamu berkesempatan berkunjung ke Jerman, cobalah berbagai jenis minumannya! Dari festival bir hingga kafe kecil, semuanya menawarkan pengalaman rasa yang otentik dan khas.
     </p>
   </div>
