--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         </div>
     </nav>
 
-    <div id="demo" class="carousel slide carousel-light" data-bs-ride="carousel">
+    <div id="demo" class="carousel slide carousel-light fade-in" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
             <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img/schnitzel.jpg" class="d-block" style="width:100%">
+                <img src="img/Beef Schnitzel.jpg" class="d-block" style="width:100%">
                 <div class="carousel-caption">
                     <h5>Beef Schnitzel</h5>
                     <p>Renyah diluar, lembut dan juicy didalam.</p>
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Bockwurst.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Bratwurst.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Currywurst.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Beef Schnitzel.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Sosis.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Spezi.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Apfelschorle.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card post-card">
+                    <div class="card post-card fade-in">
                         <img src="img/Beer.jpg" class="card-img-top" alt="Post">
                         <div class="card-overlay"></div>
                         <div class="card-body">
