--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@
   <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
   </script>
+  <script>
+    (function(){
+      emailjs.init("_zY018WcASe2JOn4v");
+    })();
+  </script>
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top position-sticky navbar-dark">
@@ -65,7 +71,7 @@
     <p class="text-center text-muted mb-4">Kami menghargai masukan dari Anda. Silakan isi form di bawah ini.</p>
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <form `method="POST">
+        <form method="POST" onsubmit="sendMail(event)">          
           <div class="mb-3">
             <label for="name" class="form-label">Nama</label>
             <input type="text" class="form-control" id="name" name="nama" required>
@@ -75,10 +81,14 @@
             <input type="email" class="form-control" id="email" name="email" required>
           </div>
           <div class="mb-3">
+            <label for="subject" class="form-label">Subjek</label>
+            <input type="text" class="form-control" id="subject" name="subject" required></textarea>
+          </div>
+          <div class="mb-3">
             <label for="message" class="form-label">Pesan / Kritik / Saran</label>
             <textarea class="form-control" id="message" rows="5" name="pesan" required></textarea>
           </div>
-          <button type="submit" class="btn btn-warning w-100" onclick="sendMail()">Kirim</button>
+          <button type="submit" class="btn btn-warning w-100" onsubmit="sendMail(event)">Kirim</button>
         </form>
       </div>
     </div>
