--- a/drink.html
+++ b/drink.html
@@ -41,10 +41,10 @@
       Jerman tidak hanya terkenal karena makanannya, tapi juga memiliki berbagai <b>minuman khas</b> yang unik dan beragam. Mulai dari bir klasik hingga minuman non-alkohol tradisional yang menyegarkan
     </p>
     <ul class="sosis-list fade-in">
-     <li><strong>Weißbier</strong> - Bir gandum khas Bavaria dengan rasa ringan dan sedikit manis.</li>
-      <li><strong>Glühwein</strong> - Minuman anggur hangat yang dibumbui, populer saat musim dingin dan pasar Natal.</li>
-      <li><strong>Apfelschorle</strong> - Campuran jus apel dan air soda, segar dan populer sebagai minuman sehari-hari.</li>
-      <li><strong>Schorle anggur</strong> - Anggur putih dicampur dengan air soda, menjadi minuman ringan yang menyegarkan.</li>
+     <li><strong>Apfelschorle </strong> - Campuran jus apel dan air soda, segar dan populer sebagai minuman sehari-hari.</li>
+      <li><strong>Beer (Bier)</strong> - Minuman fermentasi khas Jerman yang hadir dalam berbagai jenis dan rasa, mulai dari ringan hingga pahit.</li>
+      <li><strong>Radler</strong> - Campuran bir dan limun atau soda lemon, menyegarkan dan memiliki kadar alkohol lebih ringan.</li>
+      <li><strong>Spezi</strong> - Minuman campuran cola dan soda jeruk, populer di kalangan anak muda Jerman.</li>
     </ul>
     
     <div class="fun-fact fade-in">
